--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -51,8 +51,7 @@ android {
                 OPPO_APPKEY            : "",
                 OPPO_APPSECRET         : "",
                 VIVO_APPID             : "",
-                VIVO_APPKEY            : "",
-                HONOR_APPID            : ""
+                VIVO_APPKEY            : ""
         ]
     }
 
