--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,24 +36,25 @@ android {
     }
 }
 dependencies {
+//    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     //必须 主包
-    implementation 'com.engagelab:engagelab:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab:engagelab:3.5.1' // 此处以3.5.1 版本为例。
     //可选，google厂商
-    implementation 'com.engagelab.plugin:google:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:google:3.5.1' // 此处以3.5.1 版本为例。
     //可选，honor厂商
-    implementation 'com.engagelab.plugin:honor:3.5.0' // 此处以3.5.0 版本为例。
-    implementation 'com.engagelab.plugin:honor_th_push:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:honor:3.5.1' // 此处以3.5.1 版本为例。
+    implementation 'com.engagelab.plugin:honor_th_push:3.5.1' // 此处以3.5.1 版本为例。
     //可选，huawei厂商
-    implementation 'com.engagelab.plugin:huawei:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:huawei:3.5.1' // 此处以3.5.1 版本为例。
     //可选，mi厂商，海外版
-    implementation 'com.engagelab.plugin:mi_global:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:mi_global:3.5.1' // 此处以3.5.1 版本为例。
     //可选，meizu厂商
-    implementation 'com.engagelab.plugin:meizu:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:meizu:3.5.1' // 此处以3.5.1 版本为例。
     //可选，oppo厂商
-    implementation 'com.engagelab.plugin:oppo:3.5.0' // 此处以3.5.0 版本为例。
-    implementation 'com.engagelab.plugin:oppo_th_push:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:oppo:3.5.1' // 此处以3.5.1 版本为例。
+    implementation 'com.engagelab.plugin:oppo_th_push:3.5.1' // 此处以3.5.1 版本为例。
     //可选，vivo厂商
-    implementation 'com.engagelab.plugin:vivo:3.5.0' // 此处以3.5.0 版本为例。
+    implementation 'com.engagelab.plugin:vivo:3.5.1' // 此处以3.5.1 版本为例。
 
     // google push need，不需要 google 通道，则删除
     implementation 'com.google.firebase:firebase-messaging:23.1.1'
