--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -54,7 +54,8 @@ android {
                 VIVO_APPKEY            : "",
                 HONOR_APPID            : "",
                 APP_TCP_SSL            : "",
-                APP_DEBUG            : ""
+                APP_DEBUG            : "",
+                COUNTRY_CODE            : ""
 
         ]
     }
