--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    if (project.android.hasProperty("namespace")){
+        namespace 'com.engagelab.privates.flutter_plugin_engagelab'
+    }
     compileSdkVersion 30
 
     compileOptions {
