--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,48 +43,49 @@ android {
             dirs 'libs'
         }
     }
-}
-dependencies {
-//    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
 
-    implementation(name: 'mt-sdk-5.2.2-engagelab.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-google-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-honor-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-huawei-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-mi-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-mz-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-oppo-5.2.2.aar', ext: 'aar')
-    implementation(name: 'mt-sdk-vivo-5.2.2.aar', ext: 'aar')
-    implementation(name: 'th-honor-8.0.12.307.aar', ext: 'aar')
-    implementation(name: 'th-mz-5.0.5.aar', ext: 'aar')
-    implementation(name: 'th-oppo-3.5.3.aar', ext: 'aar')
+    dependencies {
+        implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
 
-    // //必须 主包
-    // implementation 'com.engagelab:engagelab:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，google厂商
-    // implementation 'com.engagelab.plugin:google:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，honor厂商
-    // implementation 'com.engagelab.plugin:honor:5.2.0' // 此处以5.2.0 版本为例。
-    // implementation 'com.engagelab.plugin:honor_th_push:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，huawei厂商
-    // implementation 'com.engagelab.plugin:huawei:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，mi厂商，海外版
-    // implementation 'com.engagelab.plugin:mi:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，meizu厂商
-    // implementation 'com.engagelab.plugin:meizu:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，oppo厂商
-    // implementation 'com.engagelab.plugin:oppo:5.2.0' // 此处以5.2.0 版本为例。
-    // implementation 'com.engagelab.plugin:oppo_th_push:5.2.0' // 此处以5.2.0 版本为例。
-    // //可选，vivo厂商
-    // implementation 'com.engagelab.plugin:vivo:5.2.0' // 此处以5.2.0 版本为例。
+//        implementation(name: 'mt-sdk-5.2.2-engagelab.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-google-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-honor-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-huawei-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-mi-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-mz-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-oppo-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'mt-sdk-vivo-5.2.2.aar', ext: 'aar')
+//        implementation(name: 'th-honor-8.0.12.307.aar', ext: 'aar')
+//        implementation(name: 'th-mz-5.0.5.aar', ext: 'aar')
+//        implementation(name: 'th-oppo-3.5.3.aar', ext: 'aar')
 
-    // google push need，不需要 google 通道，则删除
-    implementation 'com.google.firebase:firebase-messaging:25.0.0'
+        // //必须 主包
+        // implementation 'com.engagelab:engagelab:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，google厂商
+        // implementation 'com.engagelab.plugin:google:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，honor厂商
+        // implementation 'com.engagelab.plugin:honor:5.2.0' // 此处以5.2.0 版本为例。
+        // implementation 'com.engagelab.plugin:honor_th_push:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，huawei厂商
+        // implementation 'com.engagelab.plugin:huawei:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，mi厂商，海外版
+        // implementation 'com.engagelab.plugin:mi:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，meizu厂商
+        // implementation 'com.engagelab.plugin:meizu:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，oppo厂商
+        // implementation 'com.engagelab.plugin:oppo:5.2.0' // 此处以5.2.0 版本为例。
+        // implementation 'com.engagelab.plugin:oppo_th_push:5.2.0' // 此处以5.2.0 版本为例。
+        // //可选，vivo厂商
+        // implementation 'com.engagelab.plugin:vivo:5.2.0' // 此处以5.2.0 版本为例。
 
-    // huawei push need，不需要 huawei 通道，则删除
-    implementation 'com.huawei.hms:push:6.13.0.300'
-    //oppo以下依赖都需要添加，不需要 oppo 通道，则删除
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'commons-codec:commons-codec:1.6'
-    implementation 'androidx.annotation:annotation:1.1.0'
+        // google push need，不需要 google 通道，则删除
+        implementation 'com.google.firebase:firebase-messaging:25.0.0'
+
+        // huawei push need，不需要 huawei 通道，则删除
+        implementation 'com.huawei.hms:push:6.13.0.300'
+        //oppo以下依赖都需要添加，不需要 oppo 通道，则删除
+        implementation 'com.google.code.gson:gson:2.10.1'
+        implementation 'commons-codec:commons-codec:1.6'
+        implementation 'androidx.annotation:annotation:1.1.0'
+    }
 }
