--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,24 +55,37 @@ dependencies {
 //    implementation(name: 'th-mz-5.0.5.aar', ext: 'aar')
 //    implementation(name: 'th-oppo-3.5.3.aar', ext: 'aar')
 
-     //必须 主包
-     implementation 'com.engagelab:engagelab:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，google厂商
-     implementation 'com.engagelab.plugin:google:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，honor厂商
-     implementation 'com.engagelab.plugin:honor:5.2.0' // 此处以5.2.0 版本为例。
-     implementation 'com.engagelab.plugin:honor_th_push:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，huawei厂商
-     implementation 'com.engagelab.plugin:huawei:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，mi厂商，海外版
-     implementation 'com.engagelab.plugin:mi:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，meizu厂商
-     implementation 'com.engagelab.plugin:meizu:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，oppo厂商
-     implementation 'com.engagelab.plugin:oppo:5.2.0' // 此处以5.2.0 版本为例。
-     implementation 'com.engagelab.plugin:oppo_th_push:5.2.0' // 此处以5.2.0 版本为例。
-     //可选，vivo厂商
-     implementation 'com.engagelab.plugin:vivo:5.2.0' // 此处以5.2.0 版本为例。
+//     //必须 主包
+//     implementation 'com.engagelab:engagelab:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，google厂商
+//     implementation 'com.engagelab.plugin:google:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，honor厂商
+//     implementation 'com.engagelab.plugin:honor:5.2.0' // 此处以5.2.0 版本为例。
+//     implementation 'com.engagelab.plugin:honor_th_push:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，huawei厂商
+//     implementation 'com.engagelab.plugin:huawei:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，mi厂商，海外版
+//     implementation 'com.engagelab.plugin:mi:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，meizu厂商
+//     implementation 'com.engagelab.plugin:meizu:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，oppo厂商
+//     implementation 'com.engagelab.plugin:oppo:5.2.0' // 此处以5.2.0 版本为例。
+//     implementation 'com.engagelab.plugin:oppo_th_push:5.2.0' // 此处以5.2.0 版本为例。
+//     //可选，vivo厂商
+//     implementation 'com.engagelab.plugin:vivo:5.2.0' // 此处以5.2.0 版本为例。
+
+    implementation 'com.engagelab:fb-engagelab:5.2.2'
+    implementation 'com.engagelab.plugin:fb-google:5.2.2'
+    implementation 'com.engagelab.plugin:fb-honor:5.2.2'
+    implementation 'com.engagelab.plugin:fb-honor_th_push:5.2.2'
+    implementation 'com.engagelab.plugin:fb-huawei:5.2.2'
+    implementation 'com.engagelab.plugin:fb-mi:5.2.2'
+    implementation 'com.engagelab.plugin:fb-meizu:5.2.2'
+    implementation 'com.engagelab.plugin:fb-meizu_th_push:5.2.2'
+    implementation 'com.engagelab.plugin:fb-oppo:5.2.2'
+    implementation 'com.engagelab.plugin:fb-oppo_th_push:5.2.2'
+    implementation 'com.engagelab.plugin:fb-oth_sound:5.2.2'
+    implementation 'com.engagelab.plugin:fb-vivo:5.2.2'
 
     // google push need，不需要 google 通道，则删除
     implementation 'com.google.firebase:firebase-messaging:25.0.0'
