--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ flutter:
         pluginClass: FlutterPluginEngagelabPlugin
       ios:
         pluginClass: FlutterPluginEngagelabPlugin
-
+      ohos:
+        pluginClass: FlutterPluginEngagelabPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
